--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.38",
+        "postcss-import": "^16.1.0",
+        "tailwindcss": "^3.4.3",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.15",
-        "vue": "^3.4.21"
+        "vue": "^3.4.21",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
